Fix T94142, T94182: Cycles metal broken after pointcloud changes

Missing ccl_private form an older patch.

Differential Revision: https://developer.blender.org/D13612