intern/cycles/kernel/geom/point_intersect.h
@@ -23,7 +23,7 @@ CCL_NAMESPACE_BEGIN
 #ifdef __POINTCLOUD__
 
 ccl_device_forceinline bool point_intersect_test(
-    const float4 point, const float3 P, const float3 dir, const float tmax, float *t)
+    const float4 point, const float3 P, const float3 dir, const float tmax, ccl_private float *t)
 {
   const float3 center = float4_to_float3(point);
   const float radius = point.w;
@@ -93,7 +93,7 @@ ccl_device_forceinline bool point_intersect(KernelGlobals kg,
 ccl_device_inline void point_shader_setup(KernelGlobals kg,
                                           ccl_private ShaderData *sd,
                                           ccl_private const Intersection *isect,
-                                          const Ray *ray)
+                                          ccl_private const Ray *ray)
 {
   sd->shader = kernel_tex_fetch(__points_shader, isect->prim);
   sd->P = ray->P + ray->D * isect->t;
